--- a/app/scripts/grid/grid.html
+++ b/app/scripts/grid/grid.html
@@ -1,11 +1,21 @@
-<div id="game-{{ ngModel.gameSize }}">
-  <div class="grid-container">
-    <div class="grid-cell" ng-repeat="cell in ngModel.grid track by $index"></div>
+<div id="game-{{ ngModel.worldSize }}">
+	<div class="grid-container">
+    <div class="grid-cell"
+         ng-repeat="cell in ngModel.grid track by $index">
+
+    </div>
   </div>
 
   <div class="tile-container">
-    <div tile 
-          ng-model='tile'
-          ng-repeat='tile in ngModel.tiles track by $id(tile.id || $index)'></div>
+		<div
+				actor actor-role="prey"
+				state='prey.state' world-size="ngModel.worldSize"
+				ng-repeat='prey in ngModel.preys track by $index'></div>
+
+	  <div
+			  actor actor-role="predator"
+			  state='predator.state' world-size="ngModel.worldSize"
+			  ng-repeat='predator in ngModel.predators track by $index'></div>
+
   </div>
 </div>
