--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,7 @@
 <script src="scripts/async.js"></script>
 <script src="scripts/brain/world.js"></script>
 <script src="scripts/brain/agent.js"></script>
-<script src="scripts/simulator.js"></script>
+<script src="scripts/brain/simulator.js"></script>
 
 <script src="scripts/app.js"></script>
 <script src="scripts/grid/actor_directive.js"></script>
