--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,10 @@
 <script src="scripts/async.js"></script>
 <script src="scripts/brain/world.js"></script>
 <script src="scripts/brain/agent.js"></script>
+<script src="scripts/brain/helperFunctions.js"></script>
+<script src="scripts/brain/policyEvaluation.js"></script>
+<script src="scripts/brain/policyIteration.js"></script>
+<script src="scripts/brain/valueIteration.js"></script>
 <script src="scripts/brain/simulator.js"></script>
 
 <script src="scripts/app.js"></script>
