--- a/compiled SingleAgentPlanning/index.html
+++ b/compiled SingleAgentPlanning/index.html
@@ -37,13 +37,41 @@
 <!-- build:js scripts/vendor.js --><!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/button.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/carousel.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/dropdown.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/transition.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/modal.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-cookies/angular-cookies.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
+<script src="bower_components/numbers.js/src/numbers.js"></script>
+<script src="bower_components/lodash/dist/lodash.compat.js"></script>
 <script src="bower_components/angular-safeapply/safe-apply.js"></script>
 <!-- endbower --><!-- endbuild -->
 
 <!-- build:js scripts/templates.js --><!-- bower:js -->
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/button.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/carousel.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/dropdown.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/transition.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/modal.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
+<script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
+<script src="bower_components/numbers.js/src/numbers.js"></script>
+<script src="bower_components/lodash/dist/lodash.compat.js"></script>
 <!-- endbower --><!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -61,6 +89,191 @@
 <script src="scripts/grid/grid_directive.js"></script>
 <script src="scripts/game/game.js"></script>
 <!-- endbuild -->
+
+<script type="text/ng-template" id="scripts/grid/actor.html">
+	<div class="tile"
+	     ng-class="{'predator':'tile-4','prey':'tile-2'}[actorRole]">
+		<div class="tile-inner" ng-class="{'true':'no-lineheight'}[worldSize>11]">
+			<img src="images/nekocat.gif" ng-if="actorRole == 'predator'" class="actor">
+
+			<img src="images/mouse.gif" ng-if="actorRole == 'prey'" class="actor">
+		</div>
+	</div>
+</script>
+
+<script type="text/ng-template" id="scripts/grid/grid.html">
+	<div id="game-{{ ngModel.worldSize }}">
+		<div class="grid-container">
+			<div class="grid-cell relative"
+			     ng-repeat="cell in ngModel.grid track by $index">
+
+
+				<!-- for each policy -->
+				<div ng-repeat="policy in cell.policy" ng-if="!!!cell.value">
+					<div class="arrow glyphicon glyphicon-arrow-{{direction}} dir-{{direction}}"
+					     ng-class="{'true':'active'}[policy.action == direction]"
+					     ng-repeat="direction in ['left','right','up','down']">
+					</div>
+				</div>
+
+				<!-- for value grid -->
+				<div ng-if="!!cell.value" class="small-font">{{cell.value}}</div>
+			</div>
+		</div>
+
+		<div class="tile-container">
+			<div
+					actor actor-role="prey"
+					state='prey.state' world-size="ngModel.worldSize"
+					ng-repeat='prey in ngModel.preys track by $index'></div>
+
+			<div
+					actor actor-role="predator"
+					state='predator.state' world-size="ngModel.worldSize"
+					ng-repeat='predator in ngModel.predators track by $index'></div>
+
+		</div>
+	</div>
+</script>
+
+<script type="text/ng-template" id="views/main.html">
+	<div id="content" ng-controller='GameController as ctrl'>
+		<!-- heading -->
+		<div id="heading" class="row">
+			<h1 class="title">Single Agent Planning</h1>
+		</div>
+
+		<!-- settings -->
+		<div id="settings" class="row">
+			<div class="row" style="margin-bottom: 10px">
+
+				<div class="col-xs-4">
+					<div class="worldSize-container">
+						<input type="number" class="form-control" min="2" max="30" placeholder="11" ng-model="ctrl.settings.worldSize">
+					</div>
+				</div>
+
+				<div class="col-xs-4">
+					<div class="predatorLocation-container">
+						<input type="text" class="form-control" placeholder="0,0" ng-model="ctrl.settings.predatorInitLocation">
+					</div>
+				</div>
+
+				<div class="col-xs-4">
+					<div class="preyLocation-container">
+						<input type="text" class="form-control" placeholder="{{ctrl.settings.worldSize-1}},{{ctrl.settings.worldSize-1}}" ng-model="ctrl.settings.preyInitLocation">
+					</div>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-xs-12 text-right" style="margin-bottom: 10px">
+					<span ng-if='ctrl.isBusy'
+					      class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
+					<span>
+						{{ctrl.message}}
+					</span>
+					<button ng-click='ctrl.newGame()' ng-disabled="ctrl.isBusy" class="btn restart-button">Start</button>
+				</div>
+			</div>
+
+			<div class="row" style="margin-bottom:10px">
+				<div class="col-xs-3">
+					<button ng-click="ctrl.showTestResult()" ng-disabled="!ctrl.isReady['policyEvaluation']" class="btn mode-button">
+						Test Result
+					</button>
+				</div>
+				<div class="col-xs-3" ng-repeat="mode in ctrl.modes">
+					<button ng-click="ctrl.selectMode(mode.id)"
+					        ng-disabled="!ctrl.isReady[mode.id]"
+					        ng-class="{'true':'active', 'false':'innactive'}[ctrl.selectedMode==mode.id]"
+					        class="btn mode-button">
+						{{mode.name}}
+					</button>
+				</div>
+
+			</div>
+		</div>
+
+		<div class="row">
+			<button class="col-xs-2 btn restart-button glyphicon" style="width: 10%; margin-right:1%"
+			        ng-class="{'true':'glyphicon-play', 'false':'glyphicon-pause'}[!ctrl.player.isPlay]"
+			        ng-click="ctrl.player.play()"></button>
+			<button class="col-xs-2 btn restart-button glyphicon glyphicon-step-forward" style="width: 10%; margin-right:1%"
+			        ng-click="ctrl.player.stepForward()"></button>
+			<div class="col-xs-6 restart-button" style="width: 78%">
+				<input type="range" ng-model="ctrl.settings.currentStep" min="0" max="{{ctrl.settings.finalStep}}" ng-change="ctrl.previewStep()" style="margin-top: 12px">
+			</div>
+		</div>
+
+		<div id="game-container">
+			<div grid ng-model='ctrl.game' class="row"></div>
+			<div id="test-result" ng-show="ctrl.isShowResult">
+				<div class="row">
+					<div class="col-xs-12">
+						<div class="panel col-xs-12">
+							<h4>Random Policy (100 test):</h4>
+
+							<p>
+								Mean = {{ctrl.calculatedPlan.randomPolicy.stats.mean}}</br>              Std. Deviation = {{ctrl.calculatedPlan.randomPolicy.stats.standardDev}}</br>
+							</p>
+						</div>
+					</div>
+
+					<div class="col-xs-12">
+						<div class="panel col-xs-12">
+							<h4>Policy Evaluation:</h4>
+							<table class="table">
+								<tr>
+									<th>Predator</th>
+									<th>Prey</th>
+									<th>Value</th>
+								</tr>
+								<tr ng-repeat="s in ctrl.calculatedPlan.policyEvaluation.scenario">
+									<td>{{s.predator.x}}, {{s.predator.y}}</td>
+									<td>{{s.prey.x}}, {{s.prey.y}}</td>
+									<td>{{s.policy.value}}</td>
+								</tr>
+							</table>
+						</div>
+					</div>
+
+					<div class="col-xs-6">
+						<div class="panel col-xs-12">
+							<h4>Policy Iteration:</h4>
+							<table class="table">
+								<tr>
+									<th>Discount Factor</th>
+									<th># Iteration</th>
+								</tr>
+								<tr ng-repeat="s in ctrl.calculatedPlan.policyIteration">
+									<td>{{s.discountFactor}}</td>
+									<td>{{s.iteration}}</td>
+								</tr>
+							</table>
+						</div>
+					</div>
+
+					<div class="col-xs-6">
+						<div class="panel col-xs-12">
+							<h4>Value Iteration:</h4>
+							<table class="table">
+								<tr>
+									<th>Discount Factor</th>
+									<th># Iteration</th>
+								</tr>
+								<tr ng-repeat="s in ctrl.calculatedPlan.valueIteration">
+									<td>{{s.discountFactor}}</td>
+									<td>{{s.iteration}}</td>
+								</tr>
+							</table>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</script>
 
 </body>
 </html>
