--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,6 @@
 <script src="bower_components/es5-shim/es5-shim.js"></script>
 <script src="bower_components/json3/lib/json3.min.js"></script><![endif]-->
 
-<!-- build:js scripts/vendor.js --><!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
@@ -54,9 +53,7 @@
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/numbers.js/src/numbers.js"></script>
 <script src="bower_components/lodash/dist/lodash.compat.js"></script>
-<!-- endbower --><!-- endbuild -->
 
-<!-- build:js scripts/templates.js --><!-- bower:js -->
 <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/affix.js"></script>
 <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/alert.js"></script>
 <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/button.js"></script>
@@ -71,9 +68,8 @@
 <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/popover.js"></script>
 <script src="bower_components/numbers.js/src/numbers.js"></script>
 <script src="bower_components/lodash/dist/lodash.compat.js"></script>
-<!-- endbower --><!-- endbuild -->
+<script src="bower_components/chartjs/Chart.min.js"></script>
 
-<!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/async.js"></script>
 <script src="scripts/brain/world.js"></script>
 <script src="scripts/brain/agent.js"></script>
@@ -91,7 +87,6 @@
 <script src="scripts/grid/actor_directive.js"></script>
 <script src="scripts/grid/grid_directive.js"></script>
 <script src="scripts/game/game.js"></script>
-<!-- endbuild -->
 
 </body>
 </html>
