Created offPolicyMC file

--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
 <script src="scripts/brain/single_agent_planning/valueIteration.js"></script>
 
 <script src="scripts/brain/single_agent_learning/qlearning.js"></script>
+<script src="scripts/brain/single_agent_learning/offPolicyMC.js"></script>
 <script src="scripts/brain/single_agent_learning/onPolicyMC.js"></script>
 <script src="scripts/brain/single_agent_learning/sarsa.js"></script>
 
